--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,3 @@
-
-
 #dash{
     line-height: 5;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -79,8 +77,7 @@ img{
 #key{
     text-align: center;
     font-size: 5vw;
-    font-family: Muli;
-    font-weight: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .flex-container{
@@ -204,3 +201,38 @@ footer p{
     font-family: Muli;
 }
 
+@media only screen and (min-width: 1000px){
+    #key{
+        text-align: center;
+        font-size: 4vw;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        margin: 1vw 20vw 1vw 20vw;
+        font-weight: bold;
+    }
+    
+    .flex-container{
+        display: flex;
+        flex-direction: row;
+        margin-left: 10%;
+        margin-right: 10%;
+    }
+
+    .flex-container div{
+        text-align: center;
+        font-size: 2vw;
+        font-family: Muli;
+        font-weight: bold;
+    }
+    
+    .flex-container p{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 1vw;
+        color: #B1AAAA;
+        margin: 1vw 5vw 1vw 5vw;
+    }
+    
+    .flex-container img{
+        width: 40%;
+        height: 40%;
+    }
+}
