--- a/styles/index.css
+++ b/styles/index.css
@@ -63,7 +63,7 @@ input[type=text]:focus{
 }
 
 .grid{
-    display:grid;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 20px;
     padding-top: 50px;
@@ -207,12 +207,97 @@ footer p{
     font-family: Muli;
 }
 
-@media only screen and (min-width: 800px){
+@media only screen and (min-width: 1200px){
+    #dash{
+        line-height: 5;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: bold;
+        font-size: 2vw;
+        text-align: left;
+        margin-left: 10vw;
+    }
+
+    #desc{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-size: 1vw;
+        color: #B1AAAA;
+        margin-right: 60vw;
+        margin-left: 10vw;
+        font-weight: bold;
+        text-align: left;
+    }
+
+    #buttonn{
+        float: left;
+        margin-left: 10vw;
+        padding-bottom: -20vw;
+    }
+
+    #task{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        font-weight: bold;
+        font-size: 4vw;
+        margin-top: 10px;
+        text-align: left;
+        margin-left: 10vw;
+        margin-right: 40vw;
+    }
+    
+    .grid{
+        display:grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 20px;
+        margin-left: 5vw;
+        float: left;
+    }
+
+    #button2{
+        margin-bottom: 10vw;
+    }
+
+    #button1{
+        height: 40px;
+        border-radius:20px;
+        width: 150px;
+        background-color: #CC2828;
+        outline-width: 0;
+        border: 0;
+        color: white;
+        box-shadow: 2vw 2vw 3vw #F95252;
+        margin-top: 10px;
+    }
+
+    input[type=text]{
+        border-radius: 20px;
+        height: 40px;
+        width: 20vw;
+        border: 1px solid black;
+        outline-width: 0;
+        display: center;
+    }
+
+    footer div{
+        text-align: center;
+        font-size: 2vw;
+        font-family: Muli;
+        font-weight: bold;
+        margin-top: 5vw;
+        
+    }
+
+    footer p{
+        text-align: center;
+        font-size: 1vw;
+        font-family: Muli;
+        margin-left: 40vw;
+        margin-right: 40vw;
+    }
+
     #key{
         text-align: center;
         font-size: 4vw;
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-        margin: 1vw 20vw 1vw 20vw;
+        margin: 40vw 20vw 1vw 20vw;
         font-weight: bold;
     }
     
