--- a/styles/index.css
+++ b/styles/index.css
@@ -233,7 +233,7 @@ footer p{
 
     #circles{
         position: absolute;
-        top: -10px;
+        top: -12px;
         right: -10px;
         height: 60vw;
         width: 30vw;
@@ -263,9 +263,54 @@ footer p{
         text-align: left;
         margin-left: 10vw;
         margin-right: 40vw;
+        animation-name: bounceIn;
+        animation-duration: 3s;
     }
-    
-   
+
+    @-webkit-keyframes bounceIn {
+        from,
+        20%,
+        40%,
+        60%,
+        80%,
+        to {
+          -webkit-animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+          animation-timing-function: cubic-bezier(0.215, 0.61, 0.355, 1);
+        }
+      
+        0% {
+          opacity: 0;
+          -webkit-transform: scale3d(0.3, 0.3, 0.3);
+          transform: scale3d(0.3, 0.3, 0.3);
+        }
+      
+        20% {
+          -webkit-transform: scale3d(1.1, 1.1, 1.1);
+          transform: scale3d(1.1, 1.1, 1.1);
+        }
+      
+        40% {
+          -webkit-transform: scale3d(0.9, 0.9, 0.9);
+          transform: scale3d(0.9, 0.9, 0.9);
+        }
+      
+        60% {
+          opacity: 1;
+          -webkit-transform: scale3d(1.03, 1.03, 1.03);
+          transform: scale3d(1.03, 1.03, 1.03);
+        }
+      
+        80% {
+          -webkit-transform: scale3d(0.97, 0.97, 0.97);
+          transform: scale3d(0.97, 0.97, 0.97);
+        }
+      
+        to {
+          opacity: 1;
+          -webkit-transform: scale3d(1, 1, 1);
+          transform: scale3d(1, 1, 1);
+        }
+      }
 
     #button2{
         margin-bottom: 10vw;
@@ -300,7 +345,46 @@ footer p{
         grid-gap: 20px;
         margin-left: 5vw;
         float: left;
+        animation-name: wobble;
+        animation-duration: 3s;
     }
+
+    @-webkit-keyframes wobble {
+        from {
+          -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+        }
+      
+        15% {
+          -webkit-transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg);
+          transform: translate3d(-25%, 0, 0) rotate3d(0, 0, 1, -5deg);
+        }
+      
+        30% {
+          -webkit-transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg);
+          transform: translate3d(20%, 0, 0) rotate3d(0, 0, 1, 3deg);
+        }
+      
+        45% {
+          -webkit-transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg);
+          transform: translate3d(-15%, 0, 0) rotate3d(0, 0, 1, -3deg);
+        }
+      
+        60% {
+          -webkit-transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
+          transform: translate3d(10%, 0, 0) rotate3d(0, 0, 1, 2deg);
+        }
+      
+        75% {
+          -webkit-transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg);
+          transform: translate3d(-5%, 0, 0) rotate3d(0, 0, 1, -1deg);
+        }
+      
+        to {
+          -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+        }
+      }
 
     footer div{
         text-align: center;
@@ -325,7 +409,27 @@ footer p{
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
         margin: 40vw 20vw 1vw 20vw;
         font-weight: bold;
+        animation-name: zoomInUp;
+        animation-duration: 3s;
     }
+
+    @-webkit-keyframes zoomInUp {
+        from {
+          opacity: 0;
+          -webkit-transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
+          transform: scale3d(0.1, 0.1, 0.1) translate3d(0, 1000px, 0);
+          -webkit-animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+          animation-timing-function: cubic-bezier(0.55, 0.055, 0.675, 0.19);
+        }
+      
+        60% {
+          opacity: 1;
+          -webkit-transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
+          transform: scale3d(0.475, 0.475, 0.475) translate3d(0, -60px, 0);
+          -webkit-animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
+          animation-timing-function: cubic-bezier(0.175, 0.885, 0.32, 1);
+        }
+      }
     
     .flex-container{
         display: flex;
@@ -384,7 +488,34 @@ footer p{
         font-weight: bold;
         text-align: left;
         width: 35vw;
+        animation-name: lightSpeedIn;
+        animation-duration: 3s;
     }
+
+    @-webkit-keyframes lightSpeedIn {
+        from {
+          -webkit-transform: translate3d(100%, 0, 0) skewX(-30deg);
+          transform: translate3d(100%, 0, 0) skewX(-30deg);
+          opacity: 0;
+        }
+      
+        60% {
+          -webkit-transform: skewX(20deg);
+          transform: skewX(20deg);
+          opacity: 1;
+        }
+      
+        80% {
+          -webkit-transform: skewX(-5deg);
+          transform: skewX(-5deg);
+        }
+      
+        to {
+          -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+        }
+      }
+      
     
     #why-desc p{
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -437,8 +568,27 @@ footer p{
         font-family: Muli;
         font-weight: bold;
         margin-top: 5vw;
-        
+        animation-name: rotateInUpLeft;
+        animation-duration: 3s;
     }
+
+    @-webkit-keyframes rotateInUpLeft {
+        from {
+          -webkit-transform-origin: left bottom;
+          transform-origin: left bottom;
+          -webkit-transform: rotate3d(0, 0, 1, 45deg);
+          transform: rotate3d(0, 0, 1, 45deg);
+          opacity: 0;
+        }
+      
+        to {
+          -webkit-transform-origin: left bottom;
+          transform-origin: left bottom;
+          -webkit-transform: translate3d(0, 0, 0);
+          transform: translate3d(0, 0, 0);
+          opacity: 1;
+        }
+      }
     
     #seamless-desc p{
         font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
